--- a/menu.html
+++ b/menu.html
@@ -3,26 +3,20 @@
 <head>
   <meta charset="UTF-8">
   <title>Starbucks Menu</title>
+  <link rel="icon" href="https://www.starbucks.com/static/images/favicon.ico">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
-  <script>
-    let cart = [];
-    function addToCart(name, price) {
-      const existing = cart.find(item => item.name === name);
-      if (existing) {
-        existing.qty += 1;
-      } else {
-        cart.push({ name, price, qty: 1 });
-      }
-      alert(`${name} added to cart.`);
-    }
-  </script>
 </head>
 <body>
 <div class="top-bar"></div>
 <nav class="navbar navbar-expand-lg navbar-dark bg-success px-3">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#">Starbucks</a>
+      <a class="navbar-brand d-flex align-items-center" href="https://www.starbucks.com/">
+  <img src="/coffee/icon.png" alt="Starbucks Logo" width="40" height="40" class="me-2 rounded-circle">
+  <span>Starbucks</span>
+</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -39,51 +33,100 @@
 
 <main class="container my-5">
   <div class="cream-box">
-    <section class="menu-header text-center mb-5 p-4">
-      <h2 class="display-5 fw-bold text-success">☕ Explore Our Coffee Delights</h2>
-      <p class="text-muted fs-5">Choose from handcrafted beverages made with care and passion</p>
-    </section>
+ <section class="menu-header text-center mb-5 p-4">
+  <h2 class="display-5 fw-bold text-success">☕ Our Coffee Menu</h2>
+  <p class="text-muted fs-5">Discover your favorite handcrafted beverage from our rich selection</p>
+</section>
 
     <div class="row row-cols-1 row-cols-md-3 g-4">
-      <!-- START CARD TEMPLATE -->
-      <div class="col">
-        <div class="card h-100">
-          <img src="./coffee/espresso.jpg" class="card-img-top" alt="Espresso">
-          <div class="card-body">
-            <h5 class="card-title">Espresso</h5>
-            <p class="card-text">$2.95</p>
-            <button onclick="addToCart('Espresso', 2.95)" class="btn btn-success btn-sm mt-2">Add to Cart</button>
-          </div>
+
+    <div class="col">
+      <div class="card h-100">
+        <img src="./coffee/espresso.jpg" class="card-img-top" alt="Espresso">
+        <div class="card-body">
+          <h5 class="card-title">Espresso</h5>
+          <p class="card-text">$2.95</p>
+          
         </div>
       </div>
-      <div class="col">
-        <div class="card h-100">
-          <img src="./coffee/CaffeLatte.jpg" class="card-img-top" alt="Latte">
-          <div class="card-body">
-            <h5 class="card-title">Latte</h5>
-            <p class="card-text">$1.45</p>
-            <button onclick="addToCart('Latte', 1.45)" class="btn btn-success btn-sm mt-2">Add to Cart</button>
-          </div>
+    </div>
+     <div class="col">
+      <div class="card h-100">
+        <img src="./coffee/CaffeLatte.jpg" class="card-img-top" alt="Espresso">
+        <div class="card-body">
+          <h5 class="card-title">Latte</h5>
+          <p class="card-text">$1.45</p>
         </div>
       </div>
-      <div class="col">
-        <div class="card h-100">
-          <img src="/coffee/Iced Caramel Macchiato.jpeg.webp" class="card-img-top" alt="Iced Caramel Macchiato">
-          <div class="card-body">
-            <h5 class="card-title">Iced Caramel Macchiato</h5>
-            <p class="card-text">$4.25</p>
-            <button onclick="addToCart('Iced Caramel Macchiato', 4.25)" class="btn btn-success btn-sm mt-2">Add to Cart</button>
-          </div>
+    </div> <div class="col">
+      <div class="card h-100">
+        <img src="/coffee/Iced Caramel Macchiato.jpeg.webp" class="card-img-top" alt="Espresso">
+        <div class="card-body">
+          <h5 class="card-title">Iced Caramel Macchiato</h5>
+          <p class="card-text">$4.25</p>
         </div>
       </div>
-      <!-- You can continue in this pattern for all other cards -->
+    </div> <div class="col">
+      <div class="card h-100">
+        <img src="/coffee/IcedShakenEspresso.jpg" class="card-img-top" alt="Espresso">
+        <div class="card-body">
+          <h5 class="card-title">Iced Shaken Espresso</h5>
+          <p class="card-text">$2.60</p>
+        </div>
+      </div>
+    </div> <div class="col">
+      <div class="card h-100">
+        <img src="/coffee/hu.webp" class="card-img-top" alt="Espresso">
+        <div class="card-body">
+          <h5 class="card-title">Iced White Chocolate Mocha</h5>
+          <p class="card-text">$2.35</p>
+        </div>
+      </div>
+    </div> <div class="col">
+      <div class="card h-100">
+        <img src="/coffee/ji.webp" class="card-img-top" alt="Espresso">
+        <div class="card-body">
+          <h5 class="card-title">Espresso nápoje</h5>
+          <p class="card-text">$5.05</p>
+        </div>
+      </div>
+    </div> <div class="col">
+      <div class="card h-100">
+        <img src="/coffee/jt.webp" class="card-img-top" alt="Espresso">
+        <div class="card-body">
+          <h5 class="card-title">Iced Flat White</h5>
+          <p class="card-text">$3.75</p>
+        </div>
+      </div>
+    </div> <div class="col">
+      <div class="card h-100">
+        <img src="/coffee/SBX20190607_IcedEspresso.jpg" class="card-img-top" alt="Espresso">
+        <div class="card-body">
+          <h5 class="card-title">Iced Espresso</h5>
+          <p class="card-text">$2.95</p>
+        </div>
+      </div>
+    </div> 
+    <div class="col">
+      <div class="card h-100">
+        <img src="/coffee/SBX20211029_SaltedCaramelCreamColdBrew.jpg" class="card-img-top" alt="Espresso">
+        <div class="card-body">
+          <h5 class="card-title">Salted Caramel Cream Cold Brew</h5>
+          <p class="card-text">$2.95</p>
+        </div>
+      </div>
+
+</div>
     </div>
   </div>
 </main>
 
+
 <footer>
   &copy; 2025 Starbucks Coffee Company. All rights reserved.
 </footer>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 
 </body>
 </html>
