--- a/about.html
+++ b/about.html
@@ -1,81 +1,103 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <title>About Starbucks</title>
   <link rel="icon" href="https://www.starbucks.com/static/images/favicon.ico">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
 
-<div class="top-bar"></div>
+  <div class="top-bar"></div>
 
 
-<nav class="navbar navbar-expand-lg navbar-dark bg-success px-3">
-  <div class="container-fluid">
-    <a class="navbar-brand" href="#">Starbucks</a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav ms-auto">
-        <li class="nav-item"><a class="nav-link" href="index.html"><b>Home</b></a></li>
-        <li class="nav-item"><a class="nav-link" href="about.html"><b>About</b></a></li>
-        <li class="nav-item"><a class="nav-link" href="menu.html"><b>Menu</b></a></li>
+  <nav class="navbar navbar-expand-lg navbar-dark bg-success px-3">
+    <div class="container-fluid">
+      <a class="navbar-brand d-flex align-items-center" href="https://www.starbucks.com/">
+        <img src="/coffee/icon.png" alt="Starbucks Logo" width="40" height="40" class="me-2 rounded-circle">
+        <span>Starbucks</span>
+      </a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav ms-auto">
+          <li class="nav-item"><a class="nav-link" href="index.html"><b>Home</b></a></li>
+          <li class="nav-item"><a class="nav-link" href="about.html"><b>About</b></a></li>
+          <li class="nav-item"><a class="nav-link" href="menu.html"><b>Menu</b></a></li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+
+  <div class="top-bar"></div>
+  <main class="container my-5">
+    <div class="about-box p-5">
+      <div class="cream-box">
+        <h2 class="display-5 fw-bold text-success">☕ Our Story</h2>
+      </div>
+      <p>
+        🌱 <strong>Founded in 1971</strong> in the historic Pike Place Market in Seattle, Washington, Starbucks began as
+        a small store selling high-quality coffee beans and equipment. Inspired by the rich tradition of Italian
+        espresso bars, Howard Schultz joined the company in the 1980s and transformed Starbucks into a coffeehouse where
+        community and connection were just as important as coffee itself.
+      </p>
+
+      <p>
+        🌍 Over the decades, Starbucks has grown into a global phenomenon with over <strong>35,000 stores</strong>
+        worldwide. Each store is built to reflect the culture of its neighborhood, providing a warm and inviting
+        environment where customers feel at home.
+      </p>
+
+      <p>
+        ❤️ Our mission is simple but powerful: <em>“To inspire and nurture the human spirit — one person, one cup, and
+          one neighborhood at a time.”</em>
+      </p>
+
+      <h3 class="mt-5 text-success">🌿 Passion for Coffee</h3>
+      <p>
+        ☕ At Starbucks, coffee is more than just a drink — it’s a passion. We source only the finest <strong>100%
+          Arabica beans</strong>, grown and harvested with care from sustainable farms in Latin America, Africa, and
+        Asia.
+      </p>
+
+      <p>
+        🔥 Our expert roasters craft each batch to bring out the best flavor profile of every bean. Whether it’s a
+        smooth Blonde Roast or a bold Espresso Roast, every cup is made with precision and love.
+      </p>
+
+      <h3 class="mt-5 text-success">🌎 Commitment to Community</h3>
+      <p>
+        👩‍🌾 Starbucks supports local communities and coffee farmers through ethical sourcing programs like
+        <strong>C.A.F.E. Practices</strong>. We also invest in youth, education, and sustainability initiatives around
+        the world.
+      </p>
+
+      <p>
+        🌱 We’re committed to reducing our environmental impact by promoting reusable cups, eliminating plastic straws,
+        and aiming for carbon neutrality.
+      </p>
+
+      <h3 class="mt-5 text-success">📅 Fun Facts</h3>
+      <ul>
+        <li>📍 Starbucks was named after a character in the novel "Moby Dick."</li>
+        <li>💡 The first store didn’t sell coffee drinks — only beans and equipment!</li>
+        <li>🇮🇹 Inspired by a trip to Milan, Starbucks brought espresso culture to the U.S.</li>
+        <li>🌟 Starbucks Rewards has over 30 million active members.</li>
       </ul>
     </div>
-  </div>
-</nav>
+  </main>
 
-<div class="top-bar"></div>
-<main class="container my-5">
-  <div class="about-box p-5">
-    <h2 class="text-success text-center mb-4">☕ Our Story</h2>
-    <p>
-    🌱 <strong>Founded in 1971</strong> in the historic Pike Place Market in Seattle, Washington, Starbucks began as a small store selling high-quality coffee beans and equipment. Inspired by the rich tradition of Italian espresso bars, Howard Schultz joined the company in the 1980s and transformed Starbucks into a coffeehouse where community and connection were just as important as coffee itself.
-  </p>
+  <footer>
+    &copy; 2025 Starbucks Coffee Company. All rights reserved.
+  </footer>
 
-  <p>
-    🌍 Over the decades, Starbucks has grown into a global phenomenon with over <strong>35,000 stores</strong> worldwide. Each store is built to reflect the culture of its neighborhood, providing a warm and inviting environment where customers feel at home.
-  </p>
-
-  <p>
-    ❤️ Our mission is simple but powerful: <em>“To inspire and nurture the human spirit — one person, one cup, and one neighborhood at a time.”</em>
-  </p>
-
-  <h3 class="mt-5 text-success">🌿 Passion for Coffee</h3>
-  <p>
-    ☕ At Starbucks, coffee is more than just a drink — it’s a passion. We source only the finest <strong>100% Arabica beans</strong>, grown and harvested with care from sustainable farms in Latin America, Africa, and Asia.
-  </p>
-
-  <p>
-    🔥 Our expert roasters craft each batch to bring out the best flavor profile of every bean. Whether it’s a smooth Blonde Roast or a bold Espresso Roast, every cup is made with precision and love.
-  </p>
-
-  <h3 class="mt-5 text-success">🌎 Commitment to Community</h3>
-  <p>
-    👩‍🌾 Starbucks supports local communities and coffee farmers through ethical sourcing programs like <strong>C.A.F.E. Practices</strong>. We also invest in youth, education, and sustainability initiatives around the world.
-  </p>
-
-  <p>
-    🌱 We’re committed to reducing our environmental impact by promoting reusable cups, eliminating plastic straws, and aiming for carbon neutrality.
-  </p>
-
-  <h3 class="mt-5 text-success">📅 Fun Facts</h3>
-  <ul>
-    <li>📍 Starbucks was named after a character in the novel "Moby Dick."</li>
-    <li>💡 The first store didn’t sell coffee drinks — only beans and equipment!</li>
-    <li>🇮🇹 Inspired by a trip to Milan, Starbucks brought espresso culture to the U.S.</li>
-    <li>🌟 Starbucks Rewards has over 30 million active members.</li>
-  </ul>
-   </div>
-</main>
-
-<footer>
-  &copy; 2025 Starbucks Coffee Company. All rights reserved.
-</footer>
-
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
+
 </html>
