--- a/about.html
+++ b/about.html
@@ -18,7 +18,7 @@
 
   <nav class="navbar navbar-expand-lg navbar-dark bg-success px-3">
     <div class="container-fluid">
-      <a class="navbar-brand d-flex align-items-center" href="https://www.starbucks.com/">
+      <a class="navbar-brand d-flex align-items-center" href="#">
         <img src="/coffee/icon.png" alt="Starbucks Logo" width="40" height="40" class="me-2 rounded-circle">
         <span>Starbucks</span>
       </a>
