--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
   <title>Starbucks - Home</title>
   <link rel="icon" href="https://www.starbucks.com/static/images/favicon.ico">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap" rel="stylesheet">
+
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -14,7 +17,11 @@
 
 <nav class="navbar navbar-expand-lg navbar-dark bg-success px-3">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#">Starbucks</a>
+   <a class="navbar-brand d-flex align-items-center" href="#">
+  <img src="/coffee/icon.png" alt="Starbucks Logo" width="40" height="40" class="me-2 rounded-circle">
+  <span>Starbucks</span>
+</a>
+
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
       <span class="navbar-toggler-icon"></span>
     </button>
